--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@ body {
   background-repeat: repeat-x;
 }
 .contain {
-  border: 4px solid #9e9da6;
+  border: 4px solid black;
   padding: 20px;
   text-align: center;
   border-radius: 10px;
@@ -13,7 +13,7 @@ body {
 }
 .contact {
   width: 480px;
-  border: 4px solid #9e9da6;
+  border: 4px solid black;
   padding: 20px;
   text-align: center;
   border-radius: 10px;
