zapret na vydelenie

--- a/main.css
+++ b/main.css
@@ -35,6 +35,12 @@ body {
 }
 .block-info {
   margin-top: 20px;
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none;   /* Chrome/Safari/Opera */
+  -khtml-user-select: none;    /* Konqueror */
+  -moz-user-select: none;      /* Firefox */
+  -ms-user-select: none;       /* Internet Explorer/Edge */
+  user-select: none;     
 }
 .soc {
   width: 24%;
